@@ -9,7 +9,8 @@ AM_CPPFLAGS = \
 @PIXMAN_CFLAGS@ \
 @EVAS_GENERAL_CFLAGS@ \
 @FRIBIDI_CFLAGS@ \
-@evas_image_loader_svg_cflags@
+@evas_image_loader_svg_cflags@ \
+@EVIL_CFLAGS@
 
 if BUILD_LOADER_SVG
 if !EVAS_STATIC_BUILD_SVG
@@ -19,7 +20,7 @@ pkg_LTLIBRARIES = module.la
 
 module_la_SOURCES = evas_image_load_esvg.c
 
-module_la_LIBADD = @EVAS_GENERAL_LIBS@ @evas_image_loader_svg_libs@ $(top_builddir)/src/lib/libevas.la
+module_la_LIBADD = @EVAS_GENERAL_LIBS@ @evas_image_loader_svg_libs@ @EVIL_LIBS@ $(top_builddir)/src/lib/libevas.la
 module_la_LDFLAGS = -no-undefined @lt_enable_auto_import@ -module -avoid-version
 module_la_LIBTOOLFLAGS = --tag=disable-static
 
